mfrontpage-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontpage
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontpage
    spec:
      containers:
      - name: frontpage
        image: wcr.io/kwanwan/mfrontpage:$WERCKER_GIT_COMMIT
        ports:
        - containerPort: 80
        resources:
          requests: 
            memory: 500Mi
            cpu: 0.5
          limits:
            memory: 500Mi
            cpu: 0.5
        imagePullPolicy: Always
      imagePullSecrets:
      - name: wrelease
