workbetter-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: workbetter
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: workbetter
    spec:
      containers:
      - name: workbetter
        image: $DOCKER_REGISTRY/$DOCKER_REPO:$WERCKER_GIT_COMMIT 
        ports:
        - containerPort: 80
        resources:
          requests: 
            memory: 500Mi
            cpu: 0.5
          limits:
            memory: 500Mi
            cpu: 0.5
        imagePullPolicy: Always
      imagePullSecrets:
      - name: wrelease
