mfrontpage-service.yml
apiVersion: v1
kind: Service
metadata:
  name: workbetter 
  labels:
    app: workbetter
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: workbetter
