ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $NS
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /hr/
        backend:
          serviceName: mfrontpage
          servicePort: 80
